--- a/src/fe/js/components/tradingrReview/styles.css
+++ b/src/fe/js/components/tradingrReview/styles.css
@@ -22,7 +22,7 @@
 .trade-review-col {
     border: 1px solid black;
     text-align: center;
-    height: 40px;
+    min-height: 40px;
     line-height: 40px;
     margin-right:-1px;
     margin-bottom:-1px;
