--- a/src/fe/js/components/editableEle/styles.css
+++ b/src/fe/js/components/editableEle/styles.css
@@ -1,6 +1,8 @@
 .editableEleContainer {
     padding: 0 28px;
     position: relative;
+    white-space: pre-line;
+    text-align: left;
 }
 
 .editableEleContainer input {
